# Shared-memory

./: CMakeLists.txt  README.md  build.sh  main.cpp  run_connect.sh  run_create.sh
SharedMemory/: CMakeLists.txt
SharedMemory/include/: sharedMemory.hpp
SharedMemory/src/: sharedMemory.cpp
